<resources>
    <string name="app_name">&appname;</string>
    <string name="server_error">Server Error</string>
    <string name="google_application_key">AIzaSyDUm7fbwQ-rKX0g6AtxqZPJzOclMJQSPZU</string>
    <string name="no_internet"> Internet Connection is not Available </string>
    <string name="font_default">Quicksand-Bold.otf</string>
    <string name="font_bold">Quicksand-Bold.otf</string>
    <string name="font_semi_bold">Quicksand-Bold.otf</string>
    <string name="font_light">Quicksand-Light.otf</string>
    <string name="font_semi_light">Quicksand-Light.otf</string>
    <string name="font_regular">Quicksand-Regular.otf</string>
    <string name="google_service_not_present">Google Service not Present</string>
    <string name="please_enter_mobile_number">Please enter mobile number</string>
    <string name="home">Home</string>
    <string name="login"> Login </string>
    <string name="signup"> Signup </string>
    <string name="cancel"> Cancel </string>
    <string name="name"> Name </string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="select_payment_method">Select Payment Method </string>
    <string name="get_otp">Get Otp</string>
    <string name="signup_for_account">Signup for an account</string>
    <string name="please_enter_name">Please enter your name</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="credit_debit_card">Credit/Debit Card</string>
    <string name="paytm">Paytm</string>
    <string name="full_name"> Full Name </string>
    <string name="first_name"> First Name </string>
    <string name="last_name"> Last Name </string>
    <string name="email"> Email </string>
    <string name="email_address"> Email Address </string>
    <string-array name="update">
        <item>@string/update_my_detail</item>
        <item>@string/update_my_email</item>
        <item>@string/change_my_password</item>
    </string-array>
    <string name="update_password"> Update Password </string>
    <string name="no_data_found">No Data Found</string>
    <string name="search_city_product_service">Search City, Product, Service</string>
    <string name="choose_from_camera">Take Photo</string>
    <string name="choose_from_library">Choose from Library</string>
    <string name="change_location">Change Location</string>
    <string name="my_waranty">My Warranties</string>
    <string name="my_insurance">My Insurance</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="help">Help</string>
    <string name="senior_citizen">Senior Citizen Helpline</string>
    <string name="term_condition">Terms and Conditions</string>
    <string name="term_and_condition">Terms &amp; Conditions</string>
    <string name="term_and_condition_privacy">T&amp;C &amp; Our Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="verify_account">Verify Account</string>
    <string name="please_enter_verification_code">Please enter the verification code we \nsent to your email address</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="change_number">Change Number</string>
    <string name="otp_has_been_send">Otp has been send</string>
    <string name="ok">Ok</string>
    <string name="notification">Notifications</string>
    <string name="prefered_payment_option">Your Prefered Payment Option</string>
    <string name="user">User</string>
    <string name="submit">Submit</string>
    <string name="any_other_feedback">Any Other Feedback (Optional)</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    </string>
    <string name="lorem_ipsum_2">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    </string>
    <string name="your_name">Your Name</string>
    <string name="your_mobile_number">Your Mobile Number</string>
    <string name="verification_code">Verification Code</string>
    <string name="please_type_verification">Please type the verification code sent</string>
    <string name="to">to</string>
    <string name="we_will_send_you">We will send you OTP confirmation massage</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="welcome">Welcome</string>
    <string name="product_name">Product Name</string>
    <string name="nokia">Nokia</string>
    <string name="company_name">Company Name</string>
    <string name="type_name_mention_on_bill">Type name mention on bill</string>
    <string name="serial_number">Serial Number</string>
    <string name="product_serial_number">Product serial number</string>
    <string name="purchased_date">Purchase Date</string>
    <string name="waranty_period">Warranty Period</string>
    <string name="one_year">1 year</string>
    <string name="may_2016">12 may 2016</string>
    <string name="extended_waranty">Extended Warranty</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="any_two_document_mendatory">Any two documents are mandatory*</string>
    <string name="call">Call</string>
    <string name="detail">Detail</string>
    <string name="openning_hour">Opening Hour</string>
    <string name="mon_to_sat">Mon to Sat</string>
    <string name="sunday">Sunday</string>
    <string name="photos">Photos &amp; Video</string>
    <string name="review">Reviews</string>
    <string name="product">Product</string>
    <string name="claim">Claim</string>
    <string name="insurance">Insurance</string>
    <string name="account_setting">Account Settings</string>
    <string name="payment_method">Payment Method</string>
    <string name="add_another_payment_method">+ Add other payment method</string>
    <string name="update_my_detail">Update my details</string>
    <string name="update_my_email">Update my email address</string>
    <string name="change_my_password">Change my password</string>
    <string name="frequently_asked_question">Frequently asked question</string>
    <string name="add_product">Add Product</string>
    <string name="update_details">Update Details</string>
    <string name="welcomes">Welcome!</string>
    <string name="phone_number">Phone Number</string>
    <string name="your_profile">Your Profile</string>
    <string name="message">Messages</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="anniversary">Anniversary</string>
    <string name="thank_you">Thank You</string>
    <string name="your_exyended_warranty_successful">Your Extended Waranty Successful</string>
    <string name="back_to_home">Back to home</string>
    <string name="raise_an_issue">Raise an issue</string>
    <string name="buy">Buy</string>
    <string name="choose_plan">Choose Plan</string>
    <string name="choose_insurance_plan_for_product">Choose a insurance plane for your product</string>
    <string name="choose_provider">Choose Provider</string>
    <string name="you_can_also_choose_warranty_plan">You Can Also Choose Warranty Plan</string>
    <string name="close">Close</string>
    <string name="need_some_help">Need some help?</string>
    <string name="contact_us">Contact Us</string>
    <string name="warranty">Warranty</string>
    <string name="extend">Extend</string>
    <string name="buy_insurance">Buy Insurance</string>
    <string name="offer">Offer</string>
    <string name="offers">Offers</string>
    <string name="pay">Pay</string>
    <string name="search_product">Search Product</string>
    <string name="view">View</string>
    <string name="permition_denied">Permition Denied</string>
    <string name="help_support"><![CDATA[Help & Support]]></string>
    <string name="under_warranty">Under Warranty</string>
    <string name="expire_on">Expire On</string>
    <string name="your_review">Your Review</string>
    <string name="customer_name">Consumer Name</string>
    <string name="warranty_period">Warranty Period</string>
    <string name="please_enter_product_name">Please Enter Product Name</string>
    <string name="please_enter_company_name">Please Enter Company Name</string>
    <string name="please_enter_serial_number">Please Enter Serial Number</string>
    <string name="please_enter_purchase_date">Please Enter Purchase Date</string>
    <string name="please_enter_Warranty_period">Please Enter Warranty Period</string>
    <string name="please_select_two_document">Please Select Two Document</string>
    <string name="others">Others</string>
    <string name="your_product">Your Product</string>
    <string name="details">Details</string>
    <string name="system_service">System Service</string>
    <string name="cap_small_letter_with_space">ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz</string>
    <string name="model_no">Model Number</string>
    <string name="please_enter_model_number">Please Enter Model Number</string>
    <string name="thirty_days">30 days</string>
    <string name="please_enter_ten_digit_valid_mobile_nubmer">Please Enter 10 digit Valid Mobile Number</string>
    <string name="anniversary_date">Anniversary :</string>
    <string name="days">Days</string>
    <string name="year">Year</string>
    <string name="two_year">2 year</string>
    <string name="warranty_expire">Warranty Expired</string>
    <string name="my_order">My Order</string>
    <string name="live_order">Live Order</string>
</resources>