<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        style="@style/match_wrap"
        android:background="@drawable/dialog_bg"
        app:cardCornerRadius="@dimen/dialog_radius"
        android:elevation="@dimen/margin_5">
        <LinearLayout
            style="@style/match_wrap"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginBottom="@dimen/margin_10"
            android:orientation="vertical">
            <com.app.warantywise.widget.CustomTextView
                style="@style/textview_title_match"
                android:gravity="center_horizontal"
                android:text="@string/update_details"
                android:textAllCaps="true"
                android:textColor="@color/dark_black_color" />

            <com.app.warantywise.widget.CustomTextView
                style="@style/textview_product"
                android:text="@string/name"
                app:customFont="@string/font_regular" />

            <com.app.warantywise.widget.CustomEditText
                android:id="@+id/tvProductName"
                style="@style/edittext_add_product"
                android:hint="@string/name"
                app:customFont="@string/font_regular" />

            <com.app.warantywise.widget.CustomTextView
                style="@style/textview_product"
                android:text="@string/phone_number"
                app:customFont="@string/font_regular" />

            <com.app.warantywise.widget.CustomEditText
                android:id="@+id/tvCompanyName"
                style="@style/edittext_add_product"
                android:inputType="number"
                android:hint="999-999-999"
                app:customFont="@string/font_regular" />



            <com.app.warantywise.widget.CustomTextView
                style="@style/textview_product"
                android:text="@string/date_of_birth"
                app:customFont="@string/font_regular" />

            <com.app.warantywise.widget.CustomTextView
                android:id="@+id/tvDateOfBirth"
                style="@style/edittext_add_product"
                android:drawableEnd="@drawable/calender"
                android:hint="@string/may_2016"
                app:customFont="@string/font_regular" />

            <com.app.warantywise.widget.CustomTextView
                style="@style/textview_product"
                android:text="@string/anniversary"
                app:customFont="@string/font_regular" />

            <com.app.warantywise.widget.CustomTextView
                android:id="@+id/tvCalendar"
                style="@style/edittext_add_product"
                android:drawableEnd="@drawable/calender"
                android:hint="@string/may_2016"
                app:customFont="@string/font_regular" />

            <com.app.warantywise.widget.CustomTextView
                android:id="@+id/tvUpdate"
                style="@style/textview_title_wrap"
                android:text="@string/update"
                android:layout_gravity="end"
                android:textAllCaps="true"
                android:padding="@dimen/margin_11"
                android:textColor="@color/button_text_color"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</layout>